# swagger_server/controllers/sucursal_controller.py
@@ -1,6 +1,14 @@
+from http import HTTPStatus
+
 import connexion
 import six
+from flask import Response
+from peewee import DoesNotExist
 
+from swagger_server.data.dbmodel import (
+    database,
+    Sucursal as SucursalDB
+)
 from swagger_server.models.error import Error  # noqa: E501
 from swagger_server.models.sucursal import Sucursal  # noqa: E501
 from swagger_server import util
@@ -36,3 +44,22 @@ def registrar_sucursal(negocio_id, body=None):  # noqa: E501
     if connexion.request.is_json:
         body = Sucursal.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
+
+
+def update_aforo(sucursal_id, action):
+    database.connect()
+    try:
+        sucursal = SucursalDB.get_by_id(sucursal_id)
+        if action == 'plus':
+            print(sucursal.aforoactual)
+            sucursal.aforoactual = sucursal.aforoactual + 1
+            print(sucursal.aforoactual)
+        else:
+            sucursal.aforoactual = sucursal.aforoactual - 1
+        sucursal.save()
+        response = Response(status=HTTPStatus.OK.value)
+    except DoesNotExist:
+        response = Response(status=HTTPStatus.NOT_FOUND.value)
+    finally:
+        database.close()
+    return response
